@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-16T01:45:28Z",
+  "timestamp" : "2024-09-19T01:41:18Z",
   "count_outdated" : 231,
   "uniques_outdated" : 200,
-  "count" : 233,
-  "uniques" : 202,
+  "count" : 234,
+  "uniques" : 203,
   "clones" : [
     {
       "timestamp": "2024-09-14T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
